[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "airspace-monitor-mcp"
version = "1.0.0"
description = "Airspace Monitor MCP server. Tools: check airspace, get no fly zones, get drone regulations. Built by MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "airspace", "monitor"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/airspace-monitor-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
airspace_monitor_mcp = "server:main"
